@@ -41,6 +41,11 @@ Releases
       confusion matrices with a error function interface (e.g. for
       CrossValidation(errorfx=...). This class existed for a long time, but
       was hidden in the unit tests.
+    - Add :class:`~mvpa2.clfs.transerror.Confusion` to compute
+      confusion matrices with a Node interface (e.g. for
+      CrossValidation(postproc=...). This is useful if confusion matrices
+      are necessary as an intermediate result and further processing with
+      other nodes is desired.
 
 * 2.0.0 (Mon, Dec 19 2011)
 
